# rixx

./: CMakeLists.txt  README.md  west.yml
modules/flashdb/: CMakeLists.txt  Kconfig
modules/flashdb/include/: fdb_cfg.h
modules/json-c/: Kconfig
samples/modules/flashdb/: CMakeLists.txt  prj.conf
samples/modules/flashdb/src/: main.c
samples/modules/json-c/src/: main.c
zephyr/: module.yml
